# retro_ab_rs

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: rust.yml
examples/: run_a_rom.rs
exemple/: Cargo.toml
exemple/src/: main.rs
src/: args_manager.rs  av_info.rs  binding_libretro.rs  constants.rs  controller_info.rs  core.rs  environment.rs  erro_handle.rs  game_tools.rs  graphic_api.rs  lib.rs  main.rs  option_manager.rs  paths.rs  retro_ab.rs  retro_context.rs  retro_perf.rs  system.rs
src/binding/: binding_libretro.rs  binding_log_interface.rs
src/libretro/: binding_libretro.rs  binding_log_interface.rs  core.rs  core_environment.rs  environment.rs  game_tools.rs  log_interface.c  log_interface.h  mod.rs
src/managers/: args_manager.rs  mod.rs  option_manager.rs
src/test_tools/: constants.rs  context.rs  core.rs  mod.rs  paths.rs
src/tools/: ffi_tools.rs  game_tools.rs  mod.rs  mutex_tools.rs
tests/: core_test.rs
tests/common/: core.rs  mod.rs
