[package]
name = "retro_ab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
core_logs = []

[dependencies]
libloading = "0.8.1"
sdl2 = "0.36.0"

[build-dependencies]
bindgen = "0.69.2"
cc = "1.0.83"

[[example]]
name = "retro_ab_example"
path = "exemple/src/main.rs"
