[package]
name = "retro_ab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
core_logs = []

[dependencies]
libloading = "0.8.1"
sdl2 = "0.37.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4", # Lets you generate random UUIDs
]

[build-dependencies]
bindgen = "0.70.1"
cc = "1.0.83"

[[example]]
name = "run_a_rom"
